<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ass_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_base_col"
    android:orientation="vertical" >

    <include
        android:id="@+id/header_base_activity"
        layout="@layout/header_base_screen" />


    <com.kelltontech.maxisgetit.ui.widgets.VerticalScrollview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_base_activity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/ass_thumb_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@drawable/group_load" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sms"
                android:textColor="@color/maxis_green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:gravity="center_vertical"
                    android:text="@string/eneter_mobile_number" />

                <EditText
                    android:id="@+id/ass_mobileEdtTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:maxLength="10"
                    android:digits="0123456789"
                    android:background="@drawable/text_field"
                    android:inputType="phone"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dp" >

                <Button
                    android:id="@+id/ass_cancelSmsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/selector_dialog_positive"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/ass_sendSmsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/selector_dialog_positive"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/send_sms"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </com.kelltontech.maxisgetit.ui.widgets.VerticalScrollview>

</RelativeLayout>