<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include
        android:id="@+id/header_base_activity"
        layout="@layout/header_with_popdown_search" />
    <RelativeLayout
        android:id="@+id/login_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_base_activity"
        android:background="@drawable/shape_bg_green_grey_stroke"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >
        <TextView
            android:id="@+id/col_records_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />
    </RelativeLayout>
    <TextView
        android:id="@+id/login_txt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout_title"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_info"
        android:textColor="@color/title_dark_grey"
        android:textSize="@dimen/sp_12" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_txt_info" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_bg_grey_dark_border"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:weightSum="1" >
                <!--
            <ImageView
                android:id="@+id/login_profile_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/profile_icon" />
            <TextView
                android:id="@+id/login_user_title"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:text="@string/welcome_guest"
                android:textColor="@color/rainbow_green"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />               -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_bg_mobile"
                    android:weightSum="1" >
                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.16" />
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="+60"
                        android:textColor="@color/title_dark_grey"
                        android:textSize="@dimen/sp_13"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical|right"/>
                    <EditText
                        android:id="@+id/login_mobile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_weight=".84"
                        android:background="@null"
                        android:digits="0123456789+"
                        android:hint="@string/mobile_no"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:padding="5dp"
                        android:paddingLeft="2dp"
                        android:singleLine="true"
                        android:textColor="@color/text_light_grey"
                        android:textSize="@dimen/sp_13" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_bg_password"
                    android:weightSum="1" >
                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15" />
                    <EditText
                        android:id="@+id/login_pass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_weight=".85"
                        android:background="@null"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ_-0123456789"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:padding="5dp"
                        android:paddingLeft="2dp"
                        android:singleLine="true"
                        android:textColor="@color/text_light_grey"
                        android:textSize="@dimen/sp_13" />
                </LinearLayout>
                <TextView
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/login_bg_green_button"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/login_login_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold" />
                <!--
                     <TextView
                    android:id="@+id/signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_green_curved_box"
                    android:clickable="true"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />                -->
                    <TextView
                    android:id="@+id/login_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/login_forget_password"
                    android:textColor="@color/hyperlink_blue"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/login_bg_blue_button"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/login_register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:id="@+id/separator_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/login_or_separator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_separator_or"
                        android:textColor="@color/text_light_grey"
                        android:layout_centerInParent="true" 
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:id="@+id/login_bar_left"
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:background="@color/bar_light_grey" 
                        android:layout_toLeftOf="@id/login_or_separator"
                        android:layout_centerVertical="true"
                        />
                    
                    <TextView
                        android:id="@+id/login_bar_right"
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:background="@color/bar_light_grey" 
                        android:layout_toRightOf="@id/login_or_separator"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/login_guest_user_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/login_bg_blue_button"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/login_guest_user"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>